--- a/src/Register.css
+++ b/src/Register.css
@@ -1,4 +1,4 @@
-.login {
+.Register{
     background-color: white;
     height: 100vh;
     display: flex;
@@ -10,14 +10,14 @@
     margin-top: 20px;
     margin-bottom: 20px;
     object-fit: contain;
-    width: 100px;
+    width: 200px;
     margin-right: auto;
     margin-left: auto;
   }
 
-.box {
+.register-box {
     width: 30%;
-    height: 50;
+    height:50;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -25,30 +25,30 @@
     padding: 20px;
 }
 
-.box > h1 {
+.register-box > h1 {
     font-weight: 500;
     margin-bottom: 20px;
     justify-content: center;
-    margin-left:40%;
+    margin-left:25%;
   }
 
-.box > form > h5 {
+.register-box > form > h5 {
     margin-bottom: 5px;
 }
 
-.box > form > input {
+.register-box > form > input {
     height: 50px;
     margin-bottom: 10px;
     background-color: white;
-    width: 98%;
+    width: 98.3%;
   }
 
-.box > p {
+.register-box > p {
     margin-top: 15px;
-    font-size: 15px;
-}
+    font-size: 12px;
+}   
 
-.signInButton {
+.registerButton {
     background: #f0c14b;
     border-radius: 2px;
     width: 100%;
@@ -57,13 +57,4 @@
     margin-top: 10px;
     font-size:20px;
     border-color: #a88734 #9c7e31 #846a29;
-  } 
-
-.registerButton {
-    border-radius: 2px;
-    width: 100%;
-    height: 30px;
-    border: 1px solid;
-    margin-top: 10px;
-    border-color: darkgray;
-} 
+}
