--- a/src/Home.css
+++ b/src/Home.css
@@ -14,9 +14,18 @@
     mask-image: linear-gradient(to bottom,rgba(0,0,0,1),rgba(0,0,0,0));
 }
 
-.row{
+/* .row{
     display: flex; 
+    width:500px;
+    object-fit:contain;
     z-index: 1; 
     margin-left: 5px;  
     margin-right: 5px;
-}
+} */
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    margin: -10px;
+  }
