--- a/src/CSS/Product.css
+++ b/src/CSS/Product.css
@@ -52,6 +52,10 @@
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
   }
+
+  .product > button:hover{
+    background-color: orange;
+  }
   
   .price {
     margin-top: 7px;
